# plyra-memory-server

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  README.md  docker-compose.postgres.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  sync_error.txt
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/admin/: index.html
api/context/: index.html
api/recall/: index.html
api/remember/: index.html
api/stats/: index.html
changelog/: index.html
configuration/: index.html
deploy/: index.html
deploy/azure/: index.html
deploy/docker/: index.html
deploy/manual/: index.html
docs/: changelog.md  configuration.md  index.md  quickstart.md
docs/api/: admin.md  context.md  index.md  recall.md  remember.md  stats.md
docs/deploy/: azure.md  docker.md  index.md  manual.md
docs/guides/: api-keys.md  isolation.md  llm-extraction.md  postgres.md  production.md
guides/api-keys/: index.html
guides/isolation/: index.html
guides/llm-extraction/: index.html
guides/postgres/: index.html
guides/production/: index.html
memory_server/: __init__.py  auth.py  config.py  keys.py  main.py  models.py  router.py
memory_server/storage/: __init__.py  base.py  sqlite.py
plyra_memory_local/: plyra_memory-0.3.0-py3-none-any.whl
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_auth.py  test_keys.py  test_router.py
