[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plyra-memory-server"
version = "0.1.0"
description = "Self-hosted memory server for plyra-memory"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Plyra", email = "oss@plyra.dev" }]
dependencies = [
    "plyra-memory>=0.2.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
    "rich>=13.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "httpx>=0.27",
    "numpy>=1.24",
    "mkdocs<2.0",
    "mkdocs-material",
    "mkdocs-minify-plugin",
]

[project.scripts]
plyra-server = "memory_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["memory_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:asyncio",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
